# donno

./: .gitignore  docker-compose.yml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/routers/: product.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: base.py  product.py
backend/migrations/: env.py
backend/migrations/versions/: f26e35b4e8d7_create_table_product.py
frontend/: package.json  tailwind.config.cjs  tsconfig.json
frontend/src/: App.vue  index.css  interfaces.ts  main.ts
frontend/src/components/: Breadcrumbs.vue  Navbar.vue  Post.vue  Sidebar.vue
frontend/src/components/admin/: Breadcrumbs.vue  Navbar.vue  Sidebar.vue  Sticky.vue
frontend/src/layouts/: Admin.vue
frontend/src/routers/: index.ts
frontend/src/store/: breadcrumbs.ts  user.ts
frontend/src/views/: EditProduct.vue  Home.vue  Product.vue
frontend/src/views/products/: CreateProductButton.vue  EditProductButton.vue  Product.vue
