[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Lektor <denislour@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
alembic = "^1.10.2"
asyncpg = "^0.27.0"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"
